gpu-operator/archive/1.9.0/openshift/install-gpu-ocp.rst
.. Date: November 16 2021
.. Author: kquinn

.. _install-nvidiagpu-1.9.0:

###################################
Installing the NVIDIA GPU Operator
###################################

.. note:: If you are installing the **NVIDIA GPU Operator** on OpenShift <``4.9.9`` ensure you have :ref:`enabled a Cluster-wide entitlement <cluster-entitlement-1.9.0>`.
   For more information see :ref:`broken driver toolkit <broken-dtk-1.9.0>`.

With the :ref:`Node Feature Discovery Operator<install-nfd-1.9.0>` installed you can continue with the final step and install the **NVIDIA GPU Operator**.

As a cluster administrator, you can install the **NVIDIA GPU Operator** using the OpenShift Container Platform CLI or the web console.

***********************************************************
Installing the NVIDIA GPU Operator by using the web console
***********************************************************

#. In the OpenShift Container Platform web console from the side menu, navigate to  **Operators** > **OperatorHub** and select **All Projects**.

#. In **Operators** > **OperatorHub**, search for the **NVIDIA GPU Operator**. For additional information see the `Red Hat OpenShift Container Platform documentation <https://docs.openshift.com/container-platform/latest/operators/admin/olm-adding-operators-to-cluster.html>`_.

#. Select the **NVIDIA GPU Operator**, click **Install**. In the subsequent screen click **Install**.

  .. note:: Here, you can select the namespace where you want to deploy the GPU Operator. The suggested namespace to use is the ``nvidia-gpu-operator``. You can choose any existing namespace or create a new namespace under **Select a Namespace**.

            If you install in any other namespace other than ``nvidia-gpu-operator``, the GPU Operator will **not** automatically enable namespace monitoring, and metrics and alerts will **not** be collected by Prometheus.
            If only trusted operators are installed in this namespace, you can manually enable namespace monitoring with this command:

            .. code-block:: console

               $ oc label ns/$NAMESPACE_NAME openshift.io/cluster-monitoring=true

Proceed to :ref:`Create the cluster policy for the NVIDIA GPU Operator<create-cluster-policy-1.9.0>`.

*************************************************
Installing the NVIDIA GPU Operator using the CLI
*************************************************

As a cluster administrator, you can install the **NVIDIA GPU Operator** using the OpenShift CLI (``oc``).

#. Create a namespace for the **NVIDIA GPU Operator**.

   #. Create the following ``Namespace`` custom resource (CR) that defines the ``nvidia-gpu-operator`` namespace, and then save the YAML in the ``nvidia-gpu-operator.yaml`` file:

      .. code-block:: yaml

         apiVersion: v1
         kind: Namespace
         metadata:
           name: nvidia-gpu-operator

      .. note:: The suggested namespace to use is the ``nvidia-gpu-operator``. You can choose any existing namespace or create a new namespace name.
                If you install in any other namespace other than ``nvidia-gpu-operator``, the GPU Operator will **not** automatically enable namespace monitoring, and metrics and alerts will **not** be collected by Prometheus.

                If only trusted operators are installed in this namespace, you can manually enable namespace monitoring with this command:

                 .. code-block:: console

                    $ oc label ns/$NAMESPACE_NAME openshift.io/cluster-monitoring=true

   #. Create the namespace by running the following command:

      .. code-block:: console

         $ oc create -f nvidia-gpu-operator.yaml

      .. code-block:: console

         namespace/nvidia-gpu-operator created

#. Install the **NVIDIA GPU Operator** in the namespace you created in the previous step by creating the following objects:

   #. Create the following ``OperatorGroup`` CR and save the YAML in the ``nvidia-gpu-operatorgroup.yaml`` file:

      .. code-block:: yaml

         apiVersion: operators.coreos.com/v1
         kind: OperatorGroup
         metadata:
           name: nvidia-gpu-operator-group
           namespace: nvidia-gpu-operator
         spec:
          targetNamespaces:
          - nvidia-gpu-operator

   #. Create the ``OperatorGroup`` CR by running the following command:

      .. code-block:: console

         $ oc create -f nvidia-gpu-operatorgroup.yaml

      .. code-block:: console

         operatorgroup.operators.coreos.com/nvidia-gpu-operator-group created

#. Run the following command to get the ``channel`` value required for step number 5.

   .. code-block:: console

      $ oc get packagemanifest gpu-operator-certified -n openshift-marketplace -o jsonpath='{.status.defaultChannel}'

   **Example output**

   .. code-block:: console

      v1.9.0

#. Run the following commands to get the ``startingCSV`` value required for step number 5.

   .. code-block:: console

      $ CHANNEL=v1.9.0

   .. code-block:: console

      $ oc get packagemanifests/gpu-operator-certified -n openshift-marketplace -ojson | jq -r '.status.channels[] | select(.name == "'$CHANNEL'") | .currentCSV'

   **Example output**

   .. code-block:: console

      gpu-operator-certified.v1.9.0

#. Create the following ``Subscription`` CR and save the YAML in the ``nvidia-gpu-sub.yaml`` file:

   .. code-block:: yaml

      apiVersion: operators.coreos.com/v1alpha1
      kind: Subscription
      metadata:
        name: gpu-operator-certified
        namespace: nvidia-gpu-operator
      spec:
        channel: "v1.9.0"
        installPlanApproval: Manual
        name: gpu-operator-certified
        source: certified-operators
        sourceNamespace: openshift-marketplace
        startingCSV: "gpu-operator-certified.v1.9.0"

   .. note:: Update the ``channel`` and ``startingCSV`` fields with the information returned in step 3 and 4.

#. Create the subscription object by running the following command:

   .. code-block:: console

      $ oc create -f nvidia-gpu-sub.yaml

   .. code-block:: console

      subscription.operators.coreos.com/gpu-operator-certified created

#. Optional: Log in to web console and navigate to the **Operators** > **Installed Operators** page. In the ``Project: nvidia-gpu-operator`` the following is displayed:

   .. image:: graphics/gpu-operator-certified-cli-install.png

#. Verify an install plan has been created:

   .. code-block:: console

      $ oc get installplan -n nvidia-gpu-operator

   **Example output**

   .. code-block:: console

      NAME            CSV                             APPROVAL   APPROVED
      install-5dm2c   gpu-operator-certified.v1.9.0   Manual     false

#. Approve the install plan using the CLI commands:

   .. code-block:: console

      $ INSTALL_PLAN=$(oc get installplan -n nvidia-gpu-operator -oname)

   .. code-block:: console

      $ oc patch $INSTALL_PLAN -n nvidia-gpu-operator --type merge --patch '{"spec":{"approved":true }}'

   **Example output**

   .. code-block:: console

      installplan.operators.coreos.com/install-5dm2c patched

#. Alternatively click ``Upgrade available`` and approve the plan using the web console:

   .. image:: graphics/gpu-operator-certified-cli-install.png

#. Optional: Verify the successful install in the web console. The display changes to:

   .. image:: graphics/cluster_policy_suceed.png

.. _create-cluster-policy-1.9.0:

*****************************************************
Create the cluster policy for the NVIDIA GPU Operator
*****************************************************

When you install the **NVIDIA GPU Operator** in the OpenShift Container Platform, a custom resource definition for a ClusterPolicy is created. The ClusterPolicy configures the GPU stack, configuring the image names and repository, pod restrictions/credentials and so on.

.. note:: If you create a ClusterPolicy that contains an empty specification, such as ``spec{}``, the ClusterPolicy fails to deploy.

As a cluster administrator, you can create a ClusterPolicy using the OpenShift Container Platform CLI or the web console.

Create the cluster policy using the web console
-----------------------------------------------

#. In the OpenShift Container Platform web console, from the side menu, select **Operators** > **Installed Operators**, and click **NVIDIA GPU Operator**.

#. Select the **ClusterPolicy** tab, then click **Create ClusterPolicy**. The platform assigns the default name *gpu-cluster-policy*.

      .. note:: You can use this screen to customize the ClusterPolicy however the default are sufficient to get the GPU configured and running.

#. Click **Create**.

   At this point, the GPU Operator proceeds and installs all the required components to set up the NVIDIA GPUs in the OpenShift 4 cluster. Wait at least 10-20 minutes before digging deeper into any form of troubleshooting because this may take a period of time to finish.

#. The status of the newly deployed ClusterPolicy *gpu-cluster-policy* for the NVIDIA GPU Operator changes to ``State:ready`` when the installation succeeds.

 .. image:: graphics/cluster_policy_suceed.png

.. _verify-gpu-operator-install-ocp-1.9.0:

Create the cluster policy using the CLI
---------------------------------------

#. Create the ClusterPolicy:

   .. code-block:: console

      $ oc get csv -n nvidia-gpu-operator gpu-operator-certified.v1.9.0 -ojsonpath={.metadata.annotations.alm-examples} | jq .[0] > clusterpolicy.json

   .. code-block:: console

      $ oc apply -f clusterpolicy.json

   .. code-block:: console

      clusterpolicy.nvidia.com/gpu-cluster-policy created

*************************************************************
Verify the successful installation of the NVIDIA GPU Operator
*************************************************************

Verify the successful installation of the NVIDIA GPU Operator as shown here:

#. Run the following command to view these new pods and daemonsets:

   .. code-block:: console

      $ oc get pods,daemonset -n nvidia-gpu-operator

   .. code-block:: console

      NAME                                                                  READY   STATUS      RESTARTS   AGE
      pod/bb0dd90f1b757a8c7b338785a4a65140732d30447093bc2c4f6ae8e75844gfv   0/1     Completed   0          94m
      pod/gpu-feature-discovery-hlpgs                                       1/1     Running     0          91m
      pod/gpu-operator-8dc8d6648-jzhnr                                      1/1     Running     0          94m
      pod/nvidia-container-toolkit-daemonset-z2wh7                          1/1     Running     0          91m
      pod/nvidia-cuda-validator-8fx22                                       0/1     Completed   0          86m
      pod/nvidia-dcgm-exporter-ds9xd                                        1/1     Running     0          91m
      pod/nvidia-dcgm-k7tz6                                                 1/1     Running     0          91m
      pod/nvidia-device-plugin-daemonset-nqxmc                              1/1     Running     0          91m
      pod/nvidia-device-plugin-validator-87zdl                              0/1     Completed   0          86m
      pod/nvidia-driver-daemonset-48.84.202110270303-0-9df9j                2/2     Running     0          91m
      pod/nvidia-node-status-exporter-7bhdk                                 1/1     Running     0          91m
      pod/nvidia-operator-validator-kjznr                                   1/1     Running     0          91m
      pod/openshift-psap-ci-artifacts-operator-bundle-gpu-operator-master   1/1     Running     0          94m

      NAME                                                          DESIRED   CURRENT   READY   UP-TO-DATE   AVAILABLE   NODE SELECTOR                                                                                                        AGE
      daemonset.apps/gpu-feature-discovery                          1         1         1       1            1           nvidia.com/gpu.deploy.gpu-feature-discovery=true                                                                     91m
      daemonset.apps/nvidia-container-toolkit-daemonset             1         1         1       1            1           nvidia.com/gpu.deploy.container-toolkit=true                                                                         91m
      daemonset.apps/nvidia-dcgm                                    1         1         1       1            1           nvidia.com/gpu.deploy.dcgm=true                                                                                      91m
      daemonset.apps/nvidia-dcgm-exporter                           1         1         1       1            1           nvidia.com/gpu.deploy.dcgm-exporter=true                                                                             91m
      daemonset.apps/nvidia-device-plugin-daemonset                 1         1         1       1            1           nvidia.com/gpu.deploy.device-plugin=true                                                                             91m
      daemonset.apps/nvidia-driver-daemonset-48.84.202110270303-0   1         1         1       1            1           feature.node.kubernetes.io/system-os_release.OSTREE_VERSION=48.84.202110270303-0,nvidia.com/gpu.deploy.driver=true   91m
      daemonset.apps/nvidia-mig-manager                             0         0         0       0            0           nvidia.com/gpu.deploy.mig-manager=true                                                                               91m
      daemonset.apps/nvidia-node-status-exporter                    1         1         1       1            1           nvidia.com/gpu.deploy.node-status-exporter=true                                                                      91m
      daemonset.apps/nvidia-operator-validator                      1         1         1       1            1           nvidia.com/gpu.deploy.operator-validator=true                                                                        91m

   The ``nvidia-driver-daemonset`` pod runs on each worker node that contains a supported NVIDIA GPU.

   .. note:: When the Driver Toolkit is active, the ``DaemonSet`` is named ``nvidia-driver-daemonset-<RHCOS-version>``. Where ``RHCOS-version`` equals ``<OCP XY>.<RHEL XY>.<related date YYYYMMDDHHSS-0``.
             The pods of the ``DaemonSet`` are named ``nvidia-driver-daemonset-<RHCOS-version>-<UUID>``.

*************************************************************
Cluster monitoring
*************************************************************

The GPU Operator generates GPU performance metrics (DCGM-export), status metrics (node-status-exporter) and node-status alerts. For OpenShift Prometheus to collect these metrics, the namespace hosting the GPU Operator must have the label ``openshift.io/cluster-monitoring=true``.

When the GPU Operator is installed in the suggested ``nvidia-gpu-operator`` namespace, the GPU Operator automatically enables monitoring if the ``openshift.io/cluster-monitoring`` label is not defined.
If the label is defined, the GPU Operator will not change its value.

Disable cluster monitoring in the ``nvidia-gpu-operator`` namespace by setting ``openshift.io/cluster-monitoring=false`` as shown:

   .. code-block:: console

      oc label ns/nvidia-gpu-operator openshift.io/cluster-monitoring=true

If the GPU Operator is not installed in the suggested namespace, the GPU Operator will not automatically enable monitoring. Set the label manually as shown:

   .. code-block:: console

      oc label ns/$NAMESPACE openshift.io/cluster-monitoring=true

   .. note:: Only do this if trusted operators are installed in this namespace.

*************************************************************
Logging
*************************************************************

The ``nvidia-driver-daemonset`` pod has two containers.

#. Run the following to examine the logs associated with the ``nvidia-driver-ctr``:

   .. note:: This log shows the main container waiting for the driver binary, and loading it in memory.

   .. code-block:: console

      oc logs -f nvidia-driver-daemonset-48.84.202110270303-0-w6kxk -n nvidia-gpu-operator -c nvidia-driver-ctr

#. Run the following to examine the logs associated with the ``openshift-driver-toolkit-ctr``:

   .. note:: This log shows the driver being built.

   .. code-block:: console

      oc logs -f nvidia-driver-daemonset-48.84.202110270303-0-w6kxk -n nvidia-gpu-operator -c openshift-driver-toolkit-ctr

.. _running-sample-app-1.9.0:

*************************************************************
Running a sample GPU Application
*************************************************************

Run a simple CUDA VectorAdd sample, which adds two vectors together to ensure the GPUs have bootstrapped correctly.

#. Run the following:

   .. code-block:: console

      $ cat << EOF | oc create -f -

      apiVersion: v1
      kind: Pod
      metadata:
        name: cuda-vectoradd
      spec:
       restartPolicy: OnFailure
       containers:
       - name: cuda-vectoradd
         image: "nvidia/samples:vectoradd-cuda11.2.1"
         resources:
           limits:
             nvidia.com/gpu: 1
      EOF

   .. code-block:: console

      pod/cuda-vectoradd created

#. Check the logs of the container:

   .. code-block:: console

      $ oc logs cuda-vectoradd

   .. code-block:: console

      [Vector addition of 50000 elements]
      Copy input data from the host memory to the CUDA device
      CUDA kernel launch with 196 blocks of 256 threads
      Copy output data from the CUDA device to the host memory
      Test PASSED
      Done

*************************************************************
Getting information about the GPU
*************************************************************

The ``nvidia-smi`` shows memory usage, GPU utilization and the temperature of the GPU. Test the GPU access by running the popular ``nvidia-smi`` command within the pod.

To view GPU utilization, run ``nvidia-smi`` from a pod in the GPU Operator daemonset.

#. Change to the nvidia-gpu-operator project:

   .. code-block:: console

      $ oc project nvidia-gpu-operator

#. Run the following command to view these new pods:

   .. code-block:: console

      $ oc get pod -owide -lopenshift.driver-toolkit=true

   .. code-block:: console

      NAME                                                 READY   STATUS    RESTARTS   AGE    IP            NODE                          NOMINATED NODE   READINESS GATES
      nvidia-driver-daemonset-48.84.202110270303-0-9df9j   2/2     Running   0          111m   10.130.2.20   ip-10-0-140-91.ec2.internal   <none>           <none>


   .. note:: With the Pod and node name, run the ``nvidia-smi`` on the correct node.

#. Run the ``nvidia-smi`` command within the pod:

   .. code-block:: console

      $ oc exec -it nvidia-driver-daemonset-48.84.202110270303-0-9df9j -- nvidia-smi

   .. code-block:: console

      Defaulting container name to nvidia-driver-ctr.
      Use 'oc describe pod/nvidia-driver-daemonset-48.84.202110270303-0-9df9j -n nvidia-gpu-operator' to see all of the containers in this pod.
      Wed Nov 17 13:24:03 2021
      +-----------------------------------------------------------------------------+
      | NVIDIA-SMI 470.57.02    Driver Version: 470.57.02    CUDA Version: 11.4     |
      |-------------------------------+----------------------+----------------------+
      | GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |
      | Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |
      |                               |                      |               MIG M. |
      |===============================+======================+======================|
      |   0  Tesla T4            On   | 00000000:00:1E.0 Off |                    0 |
      | N/A   40C    P8    16W /  70W |      0MiB / 15109MiB |      0%      Default |
      |                               |                      |                  N/A |
      +-------------------------------+----------------------+----------------------+
      | Processes:                                                                  |
      |  GPU   GI   CI        PID   Type   Process name                  GPU Memory |
      |        ID   ID                                                   Usage      |
      |=============================================================================|
      |  No running processes found                                                 |
      +-----------------------------------------------------------------------------+

   Two tables are generated the first reflects the information about all available GPUs (the example shows one GPU). The second table tells provides details on the processes using the GPUs.

   For more information describing the contents of the tables see the man page for ``nvidia-smi``.
